kitchen ware section added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,87 @@
         </section>
           <!-- banner section ends here -->
     </header>
-    <main></main>
+    <main>
+      <!-- kitchenware section starts here -->
+      <section class="mt-32">
+        <h2 class="text-4xl font-extrabold ml-24 mb-7">Kitchenware</h2>
+      <!-- main container -->
+      <div class="flex flex-col lg:flex-row">
+        <!-- product container -->
+        <div class="flex-1 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- 1st card -->
+          <div class="card w-96 bg-base-100 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img src="images/prod1.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <div class="rating pb-4 pt-4">
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" checked />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+              </div>
+              <h2 class="card-title">K. Accessories</h2>
+              <p><span>39.00</span>TK</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- 2nd card -->
+          <div class="card w-96 bg-base-100 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img src="images/prod2.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <div class="rating pb-4 pt-4">
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" checked />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+              </div>
+              <h2 class="card-title">K. Accessories</h2>
+              <p><span>39.00</span>TK</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- 3rd card -->
+          <div class="card w-96 bg-base-100 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img src="images/prod3.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <div class="rating pb-4 pt-4">
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" checked />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+                <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#e7a745]" />
+              </div>
+              <h2 class="card-title">K. Accessories</h2>
+              <p><span>39.00</span>TK</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- calculation area container -->
+            <div class="w-[400px]">
+                <div class="text-3xl">Have Coupon?</div>
+                <div id="calculation-entry">
+                    
+                </div>
+            </div>
+      </div>
+      </section>
+      
+
+    </main>
     <footer></footer>
 
 
