--- a/index.html
+++ b/index.html
@@ -18,18 +18,6 @@
             font-family: 'Work Sans', sans-serif;
         }
     </style>
-    <!-- for customization -->
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-                colors:{
-                    'btn-clr':'#F9F6E2',
-                }
-            }
-          }
-        }
-      </script>
 </head>
 <body>
     <header>
@@ -44,7 +32,22 @@
                          above & get <span class="text-pink-600">20% off</span></h1>
             <div class="flex gap-5 mt-5 justify-center"> 
                 <p class="py-3 font-bold">Use Promo Code</p>
-                <button class="btn btn-primary bg-[#f34abb] border-none text-white">SELL200</button>
+                
+                <div>
+                  <!-- Open the modal using ID.showModal() method -->                 
+            <button class="btn btn-primary bg-[#f34abb] border-none text-white" onclick="my_modal_5.showModal()">SELL200</button>
+            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+              <form method="dialog" class="modal-box bg-pink-600">
+              <h3 class="font-bold text-lg text-white">Hello!</h3>
+              <p class="py-4 text-center text-white"><span class="font-bold text-xl">"SELL200"</span> is your coupon code. <br>
+              Apply and get 20% off in any product</p>
+              <div class="modal-action">
+      <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+              </div>
+              </form>
+          </dialog>
+                </div>
             </div>
                   </div>
                 </div>
@@ -63,7 +66,7 @@
           <!-- 1st card -->
           <button id="btn-one" onclick="handleClickBtn(this)">
           <div class="card w-96 bg-base-100 shadow-2xl">
-            <figure class="m-6 py-6 bg-[#7c7a7a0d]">
+            <figure class="m-6 py-6e bg-[#7c7a7a0d]">
               <img src="./images/prod1.png" alt="Accessories" class="rounded-xl py-4">
           </figure>
             <div class="card-body items-center text-center">
@@ -159,7 +162,7 @@
                       <h3 class="text-center font-bold text-3xl">Congratulations</h3>
                       <p class="text-center py-4">You Purchase the product</p>
                       <div class="modal-action">
-                          <button id="btn-home" class="btn w-full normal-case bg-[#e941bc] text-white">Go Home</button>
+                          <button id="btn-home" class="btn btn-primary border-none w-full normal-case bg-[#e941bc] text-white">Go Home</button>
                       </div>
                   </form>
               </dialog>
