--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="bg-white p-8 rounded-lg ">
               <p class="font-semibold">Have a Coupon?</p>
               <input id="apply-coupon" type="text" class="w-2/4 mb-3 p-3 border border-solid rounded-lg bg-base-200 ml-4 mt-4 inline" placeholder="Coupon Code">
-              <button id="btn-apply" onclick="handleApplyBtn()" class="btn bg-[#e941bc] border-transparent text-white font-bold normal-case mb-5" disabled="">Apply</button>
+              <button id="btn-apply" onclick="handleApplyBtn()" class="btn btn-primary bg-[#e941bc] border-transparent text-white font-bold normal-case mb-5" disabled="">Apply</button>
           </div>
           <div class="ml-1 bg-white p-8 rounded-lg">
               <hr>
@@ -153,7 +153,7 @@
                   <span class="font-bold">Total: </span>
                   <span id="offer">00</span> TK
               </p>
-              <button id="btn-purchase" onclick="modal.showModal()" class="btn bg-[#e941bc] border-transparent text-white font-bold mt-4 px-10 mx-auto normal-case" disabled="">Make
+              <button id="btn-purchase" onclick="modal.showModal()" class="btn btn-primary bg-[#e941bc] border-transparent text-white font-bold mt-4 px-10 mx-auto normal-case" disabled="">Make
                   Purchase</button>
               <!-- modal-->
               <dialog id="modal" class="modal">
