--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon link -->
+        <link rel="icon" href="./images/Summer 1.png" type="image/x-icon">
     <title>Welcome to Summer Sale</title>
     <!-- tailwind and  daisyUI link  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
