--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <!-- 1st card -->
           <button id="btn-one" onclick="handleClickBtn(this)">
           <div class="card w-96 bg-base-100 shadow-2xl">
-            <figure class="m-6 py-6e bg-[#7c7a7a0d]">
+            <figure class="m-6 py-6 bg-[#7c7a7a0d]">
               <img src="./images/prod1.png" alt="Accessories" class="rounded-xl py-4">
           </figure>
             <div class="card-body items-center text-center">
