fixing width of cards

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
                     <h1 class="text-5xl font-bold mb-16">Purchase TK 200 or <br>
                          above & get <span class="text-pink-600">20% off</span></h1>
             <div class="flex gap-5 mt-5 justify-center"> 
-                <p class="py-3 font-bold">Use Promo Code</p>
-                
+                <p class="py-3 font-bold">Use Promo Code</p>            
                 <div>
-                  <!-- Open the modal using ID.showModal() method -->                 
+                  <!-- modal -->                 
             <button class="btn btn-primary bg-[#f34abb] border-none text-white" onclick="my_modal_5.showModal()">SELL200</button>
             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
               <form method="dialog" class="modal-box bg-pink-600">
@@ -59,7 +58,7 @@
     </header>
     <main>
       <!-- kitchenware section starts here -->
-      <section class="mt-32 ml-8 md:ml-48 lg:ml-16">
+      <section class="mt-32 ml-5 md:ml-48 lg:ml-16">
         <h2 class="text-4xl font-extrabold ml-24 mb-7">Kitchenware</h2>
       <!-- main container -->
       <div class="flex flex-col lg:flex-row">
@@ -67,7 +66,7 @@
         <div class="flex-1 grid md:grid-cols-1 lg:grid-cols-3 gap-6">
           <!-- 1st card -->
           <button id="btn-one" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#7c7a7a0d]">
               <img src="./images/prod1.png" alt="Accessories" class="rounded-xl py-4">
           </figure>
@@ -88,7 +87,7 @@
         </button>
           <!-- 2nd card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#7c7a7a0d]">
               <img src="./images/prod2.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -109,7 +108,7 @@
           </button>
           <!-- 3rd card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#1111110D]">
               <img src="./images/prod3.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -143,15 +142,15 @@
               
               </div>
               <hr>
-              <p class="my-3">
+              <p class="mb-2">
                   <span class="font-bold">Total Price: </span>
                   <span id="total">00</span> TK
               </p>
-              <p class="my-3">
+              <p class="mb-2">
                   <span class="font-bold">Discount: </span>
                   <span id="discount">00</span> TK
               </p>
-              <p class="my-3">
+              <p class="mb-2">
                   <span class="font-bold">Total: </span>
                   <span id="offer">00</span> TK
               </p>
@@ -174,7 +173,7 @@
       </section>     
       <!-- Kitchen ware section ends here -->
       <!-- Sportswear section starts here -->
-      <section class="mt-16 ml-8 md:ml-48 lg:ml-16">
+      <section class="mt-16 ml-5 md:ml-48 lg:ml-16">
         <h2 class="text-4xl font-extrabold ml-24 mb-7">Sportswear</h2>
       <!-- main container -->
       <div class="flex flex-col lg:flex-row">
@@ -182,7 +181,7 @@
         <div class="flex-1 grid md:grid-cols-1 lg:grid-cols-3 gap-6">
           <!-- 4th card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#1111110D]">
               <img src="./images/prod4.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -203,7 +202,7 @@
         </button>
           <!-- 5th card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#1111110D]">
               <img src="./images/prod5.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -224,7 +223,7 @@
         </button>
           <!-- 6th card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#1111110D]">
               <img src="./images/prod6.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -262,7 +261,7 @@
         <div class="flex-1 grid md:grid-cols-1 lg:grid-cols-3 gap-6">
           <!-- 7th card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#1111110D]">
               <img src="./images/prod7.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -283,7 +282,7 @@
         </button>
           <!-- 8th card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#1111110D]">
               <img src="./images/prod8.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -304,7 +303,7 @@
         </button>
           <!-- 9th card -->
           <button id="" onclick="handleClickBtn(this)">
-          <div class="card w-96 bg-base-100 shadow-2xl">
+          <div class="card w-80 bg-base-100 shadow-2xl">
             <figure class="m-6 py-6 bg-[#1111110D]">
               <img src="./images/prod9.png" alt="Shoes" class="rounded-xl py-4">
           </figure>
@@ -333,11 +332,7 @@
       </div>
       </section>
       <!-- Furniture section ends here -->
-
     </main>
-    <footer></footer>
-
-
 
     <!-- javaScript link -->
     <script src="js/sale.js"></script>
